--- a/core/.env.example
+++ b/core/.env.example
@@ -1,9 +1,21 @@
+# Config Django
 SECRET_KEY = 'your key'
 DEBUG = 'your state'
+ALLOWED_HOSTS = 'host you want to allow'
+
+# Config data base
 DB_NAME = 'your DB name'
 DB_USER = 'your username'
 DB_PASSWORD = 'your password'
 DB_HOST = 'your host'
 DB_PORT = 'your port'
-ALLOWED_HOSTS = 'host you want to allow'
+
 NAME = 'your default local db name if in use'
+
+# Config Email
+EMAIL_HOST = smtp.gmail.com
+EMAIL_PORT = 587
+EMAIL_USE_TLS = True
+EMAIL_HOST_USER = tuemail@gmail.com
+EMAIL_HOST_PASSWORD = passAppGmail "(gmail's token)"
+DEFAULT_FROM_EMAIL = tuemail@email.com
